@@ -155,6 +155,7 @@
   my $mai=Slim::Utils::PluginManager->isEnabled('Plugins::MusicArtistInfo::Plugin') ? 1 : 0;
   my $dstm=Slim::Utils::PluginManager->isEnabled('Slim::Plugin::DontStopTheMusic::Plugin') ? 1 : 0;
   my $blissMixer=Slim::Utils::PluginManager->isEnabled('Plugins::BlissMixer::Plugin') ? 1 : 0;
+  my $lastMix=Slim::Utils::PluginManager->isEnabled('Plugins::LastMix::Plugin') ? 1 : 0;
   my $artistPics=$mai && Plugins::MaterialSkin::Plugin->readIntPref('plugin.musicartistinfo', 'browseArtistPictures', 1);
   my $srvEmblem=Plugins::MaterialSkin::Plugin->readIntPref('plugin.onlinelibrary', 'enableServiceEmblem', 1);
 
@@ -190,6 +191,7 @@
   print("const LMS_P_MAI=$mai;");
   print("const LMS_P_DSTM=$dstm;");
   print("const LMS_P_BMIX=$blissMixer;");
+  print("const LMS_P_LMIX=$lastMix;");
   print("const LMS_P_RMIX=$rndMix;");
   print("const LMS_DEF_ARTIST_PICS=$artistPics;");
   print("const LMS_DEF_SRV_EMBLEM=$srvEmblem;");
